--- a/style.css
+++ b/style.css
@@ -335,3 +335,32 @@ h3 {
 textarea.formulario__campo {
   resize: vertical;
 }
+
+select.formulario__campo {
+  background-color: transparent;
+  color: var(--blanco);
+  font-size: 1.6rem;
+  font-family: Arial, sans-serif;
+  border: 1rem solid var(--primarioOscuro);
+  padding: 1rem;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background-image: url("data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20viewBox%3D%220%200%204%205%22%3E%3Cpath%20fill%3D%22%23FFFFFF%22%20d%3D%22M2%205L0%200h4z%22/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: right 1rem center;
+  background-size: 1rem;
+}
+
+.formulario__mensaje-exito {
+  grid-column: 1 / 3;
+  background-color: var(--secundario);
+  color: var(--negro);
+  font-family: var(--fuentePrincipal);
+  font-size: 2rem;
+  padding: 1.5rem;
+  text-align: center;
+  border-radius: 0.5rem;
+  margin-top: 2rem;
+  display: none;
+}
