--- a/style.css
+++ b/style.css
@@ -323,7 +323,7 @@ select.formulario__campo {
 }
 .carrito__total {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
   font-family: var(--fuentePrincipal);
   font-size: 2.8rem;
